fabric-network/manifests/metrics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: prom-ingress
  name: prom-ingress
  namespace: settlements-network
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.localho.st
    http:
      paths:
      - backend:
          service:
            name: prometheus
            port:
              number: 9090
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - prometheus.localho.st
status:
  loadBalancer:
    ingress:
    - hostname: localhost
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: grafana-ingress
  name: grafana-ingress
  namespace: settlements-network
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.localho.st
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - grafana.localho.st
status:
  loadBalancer:
    ingress:
    - hostname: localhost
